gcc/testsuite/rust/rustc/ui/error-codes/E0229.rs
pub trait Foo {
    type A;
    fn boo(&self) -> <Self as Foo>::A;
}

struct Bar;

impl Foo for isize {
    type A = usize;
    fn boo(&self) -> usize { 42 }
}

fn baz<I>(x: &<I as Foo<A=Bar>>::A) {}
// { dg-error ".E0229." "" { target *-*-* } .-1 }

fn main() {
}

